--- a/WPF/WPF.csproj
+++ b/WPF/WPF.csproj
@@ -10,4 +10,25 @@
       <ProjectReference Include="..\NumberRecognizer\NumberRecognizer.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="MNIST Dataset\t10k-images.idx3-ubyte">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="MNIST Dataset\t10k-labels.idx1-ubyte">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="MNIST Dataset\train-images.idx3-ubyte">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="MNIST Dataset\train-labels.idx1-ubyte">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Numbers\CurrentNumber.png">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Models\Model.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
