--- a/NumberRecognizer/NumberRecognizer.csproj
+++ b/NumberRecognizer/NumberRecognizer.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <RootNamespace>DigitalML</RootNamespace>
+    <RootNamespace>NumberRecognizer</RootNamespace>
     <TargetFramework>net9.0</TargetFramework>
   </PropertyGroup>
 
